# herdr-plugin-rust

./: Cargo.toml  LICENSE  README.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs  models.rs  workspace.rs
crates/client/tests/: agent.rs  pane.rs  session.rs  tab.rs  workspace.rs  worktree.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: lib.rs
crates/dispatcher/tests/: dispatch.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: context.rs  event_source.rs  lib.rs  session.rs  tab.rs  worktree.rs
crates/plugin/tests/: plugin.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: context.rs  event_source.rs  events.rs  lib.rs
crates/runtime/tests/: app.rs  events.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/socket-runtime/: Cargo.toml
examples/socket-runtime/src/: main.rs
src/: agent.rs  client.rs  context.rs  env.rs  error.rs  event_source.rs  events.rs  lib.rs  logger.rs  models.rs  pane.rs  plugin.rs  runtime.rs  socket.rs  tab.rs  workspace.rs  worktree.rs
tests/: agent.rs  app.rs  dispatch.rs  events.rs  pane.rs  plugin.rs  session.rs  tab.rs  workspace.rs  worktree.rs
