[package]
name = "herdr-plugin"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ergonomic Rust SDK surface for Herdr plugins."

[workspace]
members = [
    "examples/minimal",
    "examples/socket-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Newt6611/herdr-plugin-rust"
rust-version = "1.75"

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
interprocess = "2.4.2"
thiserror.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process"] }

[dev-dependencies]
tokio.workspace = true
