[package]
name = "herdr-dispatcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Generic typed async event dispatcher for Herdr plugin tooling."

[dependencies]

[dev-dependencies]
tokio.workspace = true
