[package]
name = "herdr-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ergonomic Rust SDK surface for Herdr plugins."

[dependencies]
herdr-client.workspace = true
herdr-dispatcher.workspace = true
herdr-runtime.workspace = true

[dev-dependencies]
tokio.workspace = true
