[package]
name = "herdr-plugin"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ergonomic Rust SDK surface for Herdr plugins."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio.workspace = true
