[package]
name = "herdr-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime app facade for Herdr plugins."

[dependencies]
herdr-client.workspace = true
herdr-dispatcher.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
