[package]
name = "minimal-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
herdr-plugin = { path = "../.." }
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
